fix : 테스트 형식에 맞게 포멧  변경